devel has no upgrade

--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-katello-test.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-katello-test.yml
@@ -33,4 +33,11 @@
       - '3.13'
       - '3.14'
       - 'nightly'
+
+- project:
+    name: katello-devel
+    jobs:
+      - 'foreman-katello-{version}-test'
+    empty: ''
+    version:
       - 'devel'
