include foreman_infra.groovy for plugins pipelines
also use the helper in client.groovy

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-release.yaml
@@ -33,6 +33,7 @@
         - 'pipelines/lib/obal.groovy{empty}'
         - 'pipelines/lib/rpm_packaging.groovy{empty}'
         - 'pipelines/lib/release.groovy{empty}'
+        - 'pipelines/lib/foreman_infra.groovy{empty}'
 
 - job-template:
     name: 'foreman-plugins-{version}-rpm-pipeline'
@@ -49,6 +50,7 @@
         - 'pipelines/lib/obal.groovy{empty}'
         - 'pipelines/lib/rpm_packaging.groovy{empty}'
         - 'pipelines/lib/release.groovy{empty}'
+        - 'pipelines/lib/foreman_infra.groovy{empty}'
 
 - project:
     name: foreman
