Drop MySQL from PR & nightly testing

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin.yaml
@@ -35,4 +35,4 @@
     repo: '{name}'
     branch: master
     foreman_branch: develop
-    dbs: 'postgresql mysql sqlite3'
+    dbs: 'postgresql sqlite3'
