--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop_pr_core.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop_pr_core.yaml
@@ -28,7 +28,6 @@
           values:
             - postgresql-integrations
             - postgresql
-            - mysql
             - sqlite3
       - axis:
           type: label-expression
@@ -37,7 +36,7 @@
             - fast
     execution-strategy:
       combination-filter: >
-        ((database == 'postgresql') && ((ruby == '2.3') || (ruby == '2.5') || (ruby == '2.6'))) || ((database == 'mysql') && (ruby == '2.5')) || ((database == 'sqlite3') && (ruby == '2.5')) || ((database == 'postgresql-integrations') && (ruby == '2.5'))
+        ((database == 'postgresql') && ((ruby == '2.3') || (ruby == '2.5') || (ruby == '2.6'))) || ((database == 'sqlite3') && (ruby == '2.5')) || ((database == 'postgresql-integrations') && (ruby == '2.5'))
     builders:
       - shell: !include-raw: scripts/test/test_develop.sh
     publishers:
