Drop Xenial and Stretch from nightly

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_plugin.yaml
@@ -12,7 +12,7 @@
           type: user-defined
           name: os
           values:
-          - xenial
+          - bionic
       - axis:
           type: slave
           name: arch
