Add pulp-packaging rpm pr test

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/github_pr.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/github_pr.yaml
@@ -52,3 +52,13 @@
           status-url: https://ci.theforeman.org/blue/organizations/jenkins/$JOB_NAME/detail/$JOB_NAME/$BUILD_ID/pipeline
           white-list-target-branches:
             - tfm-ror52
+
+- trigger:
+    name: github_pr_pulp_packaging
+    triggers:
+      - github-pull-request:
+          <<: *ghprb_defaults
+          status-url: https://ci.theforeman.org/blue/organizations/jenkins/$JOB_NAME/detail/$JOB_NAME/$BUILD_ID/pipeline
+          white-list-target-branches:
+            - master
+            - 2\..*
