Add packaging release jobs for other branches

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-release-pipelines.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-release-pipelines.yaml
@@ -60,9 +60,7 @@
       - 'foreman-plugins-{version}-rpm-pipeline'
     empty: ''
     version:
-      - '1.22'
-      - '1.23'
-      - '1.24'
+      !include: ../../includes/foreman_versions.yaml.inc
 
 # There is no unified foreman-nightly-release-pipeline
 - project:
