--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
@@ -31,7 +31,7 @@
           values:
           - debian
     execution-strategy:
-      combination-filter: '(onlyos == "all" || onlyos == os) && !((version == "1.21" || version == "1.22" || version == "1.23") && os == "buster") && !(version == "nightly" && os == "stretch") && !(version == "nightly" && os == "xenial")'
+      combination-filter: '(onlyos == "all" || onlyos == os) && !((version == "1.22" || version == "1.23") && os == "buster") && !(version == "nightly" && os == "stretch") && !(version == "nightly" && os == "xenial")'
     builders:
       - build_deb_dependency
     publishers:
