--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -24,6 +24,7 @@
           values:
             - '2.5'
             - '2.6'
+            - '2.7'
       - axis:
           type: user-defined
           name: database
@@ -37,7 +38,7 @@
             - fast
     execution-strategy:
       combination-filter: >
-        ((database == 'postgresql') && ((ruby == '2.5') || (ruby == '2.6'))) || ((database == 'sqlite3') && (ruby == '2.5'))
+        (database == 'postgresql') || ((database == 'sqlite3') && (ruby == '2.5'))
     wrappers:
       - timeout:
           type: absolute
