--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-luna-nightly-test.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-luna-nightly-test.yml
@@ -6,6 +6,7 @@
     dsl:
       !include-raw:
         - pipelines/lib/foremanCentosJob.groovy
+        - pipelines/lib/pipelines.groovy
         - pipelines/test/luna/nightly.groovy
         - ../theforeman.org/pipelines/lib/duffy.groovy
         - ../theforeman.org/pipelines/lib/ansible.groovy
