--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-nightly-test.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-nightly-test.yml
@@ -6,6 +6,7 @@
     dsl:
       !include-raw:
         - pipelines/lib/foremanCentosJob.groovy{empty}
+        - pipelines/lib/pipelines.groovy{empty}
         - pipelines/test/foreman/nightly-{distro}.groovy
         - ../theforeman.org/pipelines/lib/duffy.groovy{empty}
         - ../theforeman.org/pipelines/lib/ansible.groovy{empty}
