--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-release-test.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-release-test.yml
@@ -17,6 +17,7 @@
       !include-raw:
         - pipelines/test/foreman/release.groovy{empty}
         - pipelines/lib/foremanCentosJob.groovy{empty}
+        - pipelines/lib/pipelines.groovy{empty}
         - ../theforeman.org/pipelines/lib/duffy.groovy{empty}
         - ../theforeman.org/pipelines/lib/ansible.groovy{empty}
         - ../theforeman.org/pipelines/lib/foreman_infra.groovy{empty}
