Add dhcp_remote_isc tests
Currently this repository is tested by Travis but this unifies the
testing.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin-pull-request.yaml
@@ -39,6 +39,7 @@
 - project:
     name: smart-proxy-plugin-pull-request
     plugin:
+      - dhcp_remote_isc
       - discovery
       - dynflow
       - monitoring
