--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin.yaml
@@ -40,6 +40,7 @@
 - project:
     name: smart-proxy-plugin
     plugin:
+      - dhcp_remote_isc
       - discovery:
           branch: develop # have to be the special child
       - dynflow
