move our shielding from Fastly's IAD to BWI datacenter
IAD is not to be used anymore

--- a/ansible/fastly.yml
+++ b/ansible/fastly.yml
@@ -16,7 +16,7 @@
           - name: web02.theforeman.org
             address: web02.theforeman.org
             port: 443
-            shield: iad-va-us
+            shield: bwi-va-us
             ssl_cert_hostname: "{{ item }}.theforeman.org"
         conditions:
           - name: error log
