Add tests for smart-proxy-{dhcp,dns}-infoblox
Currently these are tested in Travis but by standardizing on Jenkins
this simplifies maintenance.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin.yaml
@@ -40,7 +40,9 @@
 - project:
     name: smart-proxy-plugin
     plugin:
+      - dhcp_infoblox
       - dhcp_remote_isc
+      - dns_infoblox
       - discovery:
           branch: develop # have to be the special child
       - dynflow
