--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin-pull-request.yaml
@@ -39,7 +39,9 @@
 - project:
     name: smart-proxy-plugin-pull-request
     plugin:
+      - dhcp_infoblox
       - dhcp_remote_isc
+      - dns_infoblox
       - discovery
       - dynflow
       - monitoring
