Use vars files in source-release jobs
This also corrects the smart-proxy project_name which fixes its package
release job. By making the source and package release use the same vars
file, it's much more likely they'll do the same thing.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/source/foreman-selinux-source-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/source/foreman-selinux-source-release.yaml
@@ -11,6 +11,7 @@
       - github
     dsl:
       !include-raw:
+        - pipelines/vars/foreman-selinux-develop-release.groovy
         - pipelines/release/source/foreman-selinux.groovy
         - pipelines/lib/nightly_packaging.groovy
         - pipelines/lib/foreman_infra.groovy
