--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/source/smart-proxy-develop-source-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/source/smart-proxy-develop-source-release.yaml
@@ -11,6 +11,7 @@
       - github
     dsl:
       !include-raw:
+        - pipelines/vars/smart-proxy-develop-release.groovy
         - pipelines/release/source/smart-proxy.groovy
         - pipelines/lib/nightly_packaging.groovy
         - pipelines/lib/foreman_infra.groovy
