--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/source/foreman-develop-source-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/source/foreman-develop-source-release.yaml
@@ -10,6 +10,7 @@
       - github
     dsl:
       !include-raw:
+        - pipelines/vars/foreman-develop-release.groovy
         - pipelines/release/source/foreman.groovy
         - pipelines/lib/nightly_packaging.groovy
         - pipelines/lib/foreman_infra.groovy
