--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/source/foreman-installer-source-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/source/foreman-installer-source-release.yaml
@@ -12,6 +12,7 @@
       - github
     dsl:
       !include-raw:
+        - pipelines/vars/foreman-installer-develop-release.groovy
         - pipelines/release/source/foreman-installer.groovy
         - pipelines/lib/nightly_packaging.groovy
         - pipelines/lib/foreman_infra.groovy
