include foreman_infra lib in packaging release job

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-packaging-rpm-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-packaging-rpm-release.yaml
@@ -17,6 +17,7 @@
         - 'pipelines/lib/ansible.groovy{empty}'
         - 'pipelines/lib/obal.groovy{empty}'
         - 'pipelines/lib/rpm_packaging.groovy{empty}'
+        - 'pipelines/lib/foreman_infra.groovy{empty}'
 
 - project:
     name: foreman-packaging
