--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_parsers_master_pull_request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_parsers_master_pull_request.yaml
@@ -1,40 +1,16 @@
 - job:
-    name: test_kafo_parsers_master_pull_request
-    description: |
-      Tests a Kafo Parsers pull request under each Ruby and Puppet configuration.
-    concurrent: true
-    project-type: matrix
+    name: kafo-parsers-pr-test
+    project-type: pipeline
+    sandbox: true
     properties:
       - github:
           url: https://github.com/theforeman/kafo_parsers
       - tfm-pull-request-build-discarder
-    scm:
-      - git:
-          url: https://github.com/theforeman/kafo_parsers
-          wipe-workspace: true
-          branches:
-            - '${ghprbActualCommit}'
-          refspec: '+refs/pull/${ghprbPullId}/*:refs/remotes/origin/pr/${ghprbPullId}/*'
     triggers:
       - github_pr:
-          context: kafo_parsers
-    axes:
-      - axis:
-          type: user-defined
-          name: ruby
-          values:
-            - 2.0.0
-            - 2.1
-            - 2.3
-      - axis:
-          type: user-defined
-          name: puppet
-          values:
-            - 4.10.0
-    builders:
-      - shell: !include-raw: scripts/test/test_kafo_parsers_master.sh
-    publishers:
-      - gemset_cleanup
-      - junit:
-          results: 'jenkins/reports/unit/*.xml'
-          health-scale-factor: 1.0
+          context: 'kafo_parsers'
+    dsl:
+      !include-raw:
+        - pipelines/lib/git.groovy
+        - pipelines/lib/rvm.groovy
+        - pipelines/test/kafo.groovy
