Rename kafo PR tests to match naming convention

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/tests/kafo-pr-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/tests/kafo-pr-test.yaml
@@ -1,5 +1,5 @@
 - job:
-    name: test_kafo_master_pull_request
+    name: kafo-pr-test
     project-type: pipeline
     sandbox: true
     properties:
