--- a/puppet/Rakefile
+++ b/puppet/Rakefile
@@ -7,6 +7,12 @@ require 'puppet-syntax/tasks/puppet-syntax'
 PuppetSyntax.manifests_paths = ['modules/*/manifests/**/*.pp']
 PuppetSyntax.templates_paths = ['modules/*/templates/**/*.{erb,epp}']
 
-task :test => [:syntax, :spec]
+require 'puppet-lint/tasks/puppet-lint'
+PuppetLint::RakeTask.new :lint do |config|
+  config.pattern = PuppetSyntax.manifests_paths
+  config.ignore_paths = ['modules/exim/**/*.pp', 'modules/slave/**/*.pp']
+end
+
+task :test => [:syntax, :lint, :spec]
 
 task :default => [:test]
