--- a/puppet/Gemfile
+++ b/puppet/Gemfile
@@ -1,6 +1,7 @@
 source 'https://rubygems.org'
 
 gem 'puppet', '~> 6.9', require: false
+gem 'puppet-lint', require: false
 gem 'puppet-syntax', require: false
 gem 'rspec-puppet', require: false
 gem 'rspec-puppet-facts', require: false
