Keep last 10 stable tests

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_1_23_stable.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_1_23_stable.yaml
@@ -4,6 +4,9 @@
     quiet-period: 2700
     properties:
       - github_foreman
+      - build-discarder:
+          num-to-keep: 10
+          artifact-num-to-keep: 10
     scm:
       - foreman:
           branch: '1.23-stable'
