add foreman_default_hostgroup PR testing

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-plugins-pull-request.yaml
@@ -60,6 +60,8 @@
           repo: 'https://github.com/theforeman/foreman_ansible'
       - foreman_bootdisk:
           repo: 'https://github.com/theforeman/foreman_bootdisk'
+      - foreman_default_hostgroup:
+          repo: 'https://github.com/theforeman/foreman_default_hostgroup'
       - foreman_digitalocean:
           repo: 'https://github.com/theforeman/foreman-digitalocean'
       - foreman_discovery:
