--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_1_24_stable.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_1_24_stable.yaml
@@ -39,7 +39,7 @@
       - gemset_cleanup
       - ircbot_freenode
       - archive:
-          artifacts: 'pkg/*,Gemfile.lock'
+          artifacts: 'pkg/*,Gemfile.lock,package-lock.json'
           only-if-success: false
       - junit:
           results: 'jenkins/reports/unit/*.xml'
