Re-factor job-templates to drop individual version groovy files
Modifies the names of some existing jobs to align all of them to
a common convention:

namespace-type-version-distro-action-test

For example:

foreman-nightly-debian9-upgrade-test
foreman-katello-nightly-centos7-install-test

--- a/puppet/modules/jenkins_job_builder/files/centos.org/ansible/jenkins_job.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/ansible/jenkins_job.yml
@@ -26,14 +26,9 @@
     - debug:
         msg: "{{ crumb.json.crumb }}"
 
-    - name: "Set facts for build"
-      set_fact:
-        jenkins_build_url: "{{ jenkins_host }}/job/{{ jenkins_job_name }}/build?TOKEN={{ jenkins_job_token }}"
-
     - name: "Set facts for parametrized build"
       set_fact:
-        jenkins_build_url: "{{ jenkins_host }}/job/{{ jenkins_job_name }}/buildWithParameters?TOKEN={{ jenkins_job_token }}&{{ jenkins_job_parameters|urlencode }}"
-      when: jenkins_job_parameters is defined
+        jenkins_build_url: "{{ jenkins_host }}/job/{{ jenkins_job_name }}/buildWithParameters?TOKEN={{ jenkins_job_token }}&{{ jenkins_job_parameters|default('')|urlencode }}"
 
     - name: "Start Jenkins job"
       uri:
