--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-nightly-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-nightly-rpm-pipeline.yaml
@@ -6,6 +6,7 @@
       - timed: 'H 21 * * *'
     dsl:
       !include-raw:
+        - pipelines/vars/foreman/nightly.groovy
         - pipelines/release/pipelines/foreman-rpm.groovy
         - pipelines/lib/release.groovy
         - pipelines/lib/rvm.groovy
