Added discovery 16.1 branch

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman_discovery.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman_discovery.yaml
@@ -4,5 +4,7 @@
     branch:
       - develop:
           foreman_branch: develop
+      - 16.1-stable:
+          foreman_branch: 16.1-stable
     jobs:
       - 'test_plugin_{name}_{branch}'
