--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
@@ -52,6 +52,7 @@ Any value other than "theforeman" will be pushed to http://stagingdeb.theforeman
             - all
             - buster
             - bionic
+            - focal
             - stretch
             - xenial
           description: 'Restrict matrix job to just the one OS.'
