--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
@@ -32,7 +32,7 @@
           values:
           - debian
     execution-strategy:
-      combination-filter: '(onlyos == "all" || onlyos == os) && !((version == "1.22" || version == "1.23") && os == "buster") && !((version == "2.1" || version == "2.0" || version == "nightly") && os == "stretch") && !((version == "2.1" || version == "2.0" || version == "nightly") && os == "xenial") && !((version == "2.1" || version == "2.0" || version == "1.24" || arch = "armv8") && os == "focal")'
+      combination-filter: '(onlyos == "all" || onlyos == os) && !((version == "2.1" || version == "2.0" || version == "nightly") && os == "stretch") && !((version == "2.1" || version == "2.0" || version == "nightly") && os == "xenial") && !((version == "2.1" || version == "2.0" || version == "1.24" || arch = "armv8") && os == "focal")'
     builders:
       - build_deb_dependency
     publishers:
