--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-pipeline-template.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-pipeline-template.yml
@@ -6,7 +6,7 @@
     parameters:
       - string:
           name: expected_version
-          default: '2.2'
+          default: '2.2.0-develop'
       - string:
           name: version
           default: '{version}'
