Fix luna nightly

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/luna-nightly-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/luna-nightly-rpm-pipeline.yaml
@@ -10,6 +10,7 @@
           result: success
     dsl:
       !include-raw:
+        - pipelines/vars/katello/nightly.groovy
         - pipelines/release/pipelines/luna.groovy
         - pipelines/lib/ansible.groovy
         - pipelines/lib/foreman_infra.groovy
