--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-pipelines.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-pipelines.yml
@@ -30,6 +30,7 @@
       - '2.0'
     action:
       - install
+      - upgrade
     type:
       - foreman
 
@@ -47,6 +48,7 @@
       - '2.1'
     action:
       - install
+      - upgrade
     type:
       - foreman
 
