correct type in non-foreman pipelines

--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-pipeline-template.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-pipeline-template.yml
@@ -18,7 +18,7 @@
           default: '{action}'
       - string:
           name: type
-          default: 'foreman'
+          default: '{type}'
     dsl:
       !include-raw:
         - pipelines/lib/foremanCentosJob.groovy{empty}
