clean old ci.centos.org jobs automatically
this updates the URL of the jenkins node, as you can reach the API also
*below* a view, but then are limited to that view -- exactly what we
need to delete only our jobs :)

--- a/puppet/modules/jenkins_job_builder/files/centos.org/centos_jenkins.ini
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/centos_jenkins.ini
@@ -6,5 +6,5 @@ recursive=True
 allow_duplicates=False
 
 [jenkins]
-url=https://ci.centos.org
+url=https://ci.centos.org/view/Foreman
 query_plugins_info=False
