Drop stretch and xenial from packaging pipelines
Also don't build 2.2 on arm/focal

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
@@ -14,8 +14,6 @@
           values:
           - buster
           - bionic
-          - stretch
-          - xenial
       - axis:
           type: slave
           name: arch
@@ -28,7 +26,7 @@
           values:
           - debian
     execution-strategy:
-      combination-filter: '(onlyarch == "all" || onlyarch == arch) && (onlyos == "all" || onlyos == os) && !((version == "2.1" || version == "2.0" || version == "nightly") && os == "stretch") && !((version == "2.1" || version == "2.0" || version == "nightly") && os == "xenial") && !((version == "2.1" || version == "nightly") && arch == "armv8")'
+      combination-filter: '(onlyarch == "all" || onlyarch == arch) && (onlyos == "all" || onlyos == os) && !((version == "2.2" || version == "2.1" || version == "nightly") && arch == "armv8")'
     builders:
       - build_deb_coreproject
     publishers:
@@ -53,8 +51,6 @@ Any value other than "theforeman" will be pushed to http://stagingdeb.theforeman
             - buster
             - bionic
             - focal
-            - stretch
-            - xenial
           description: 'Restrict matrix job to just the one OS.'
       - choice:
           name: onlyarch
