--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
@@ -18,8 +18,6 @@
           - buster
           - bionic
           - focal
-          - stretch
-          - xenial
       - axis:
           type: slave
           name: arch
@@ -32,7 +30,7 @@
           values:
           - debian
     execution-strategy:
-      combination-filter: '(onlyos == "all" || onlyos == os) && !((version == "2.1" || version == "2.0" || version == "nightly") && os == "stretch") && !((version == "2.1" || version == "2.0" || version == "nightly") && os == "xenial") && !((version == "2.1" || version == "2.0" || version == "1.24") && os == "focal") && !((version == "2.1" || version == "nightly") && arch == "armv8")'
+      combination-filter: '(onlyos == "all" || onlyos == os) && !((version == "2.2" || version == "2.1" || version == "2.0" ) && os == "focal") && !((version == "2.2" || version == "2.1" || version == "nightly") && arch == "armv8")'
     builders:
       - build_deb_dependency
     publishers:
@@ -53,8 +51,6 @@ Any value other than "theforeman" will be pushed to http://stagingdeb.theforeman
             - buster
             - bionic
             - focal
-            - stretch
-            - xenial
           description: 'Restrict matrix job to just the one OS.'
       - string:
           name: repo
