Retry getting a node from ci.centos

--- a/puppet/modules/jenkins_job_builder/files/centos.org/ansible/provision.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/ansible/provision.yml
@@ -8,10 +8,13 @@
         action: get
         api_key: "{{ api_key }}"
       register: cico_get_data
+      retries: 5
+      delay: 5
+      until: cico_get_data.results.ssid
 
     - name: 'Fail if no SSID returned'
       fail:
-        msg: 'No SSID return from ci.centos.org when getting new node'
+        msg: 'No SSID returned from ci.centos.org when getting new node'
       when: not cico_get_data.results.ssid
 
     - name: 'Retry geting list of nodes'
