Retry provisioning of a ci.centos.org node

--- a/puppet/modules/jenkins_job_builder/files/centos.org/ansible/provision.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/ansible/provision.yml
@@ -7,10 +7,8 @@
       cico:
         action: get
         api_key: "{{ api_key }}"
+        retry_count: 5
       register: cico_get_data
-      retries: 5
-      delay: 5
-      until: cico_get_data.results.ssid
 
     - name: 'Fail if no SSID returned'
       fail:
