--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/katello-pipelines.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/katello-pipelines.yml
@@ -1,11 +1,10 @@
 ---
 - project:
-    name: katello-release-3.14-3.15
+    name: katello-release-3.15
     jobs:
       - 'foreman-pipeline-{type}-{version}-{distro}-{action}'
     empty: ''
     version:
-      - '3.14'
       - '3.15'
     distro:
       - centos7
