--- a/ansible/fastly.yml
+++ b/ansible/fastly.yml
@@ -35,6 +35,7 @@
             check_interval: 60000
         cloudfiles: []
       with_items:
+        - deb
         - downloads
         - stagingdeb
         - yum
