[WIP] Add stages for containers to pipelines
Adds additional stage that triggers image
builds when pipelines run.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-nightly-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-nightly-rpm-pipeline.yaml
@@ -14,3 +14,4 @@
         - pipelines/lib/foreman_infra.groovy
         - pipelines/lib/rpm_packaging.groovy
         - pipelines/lib/obal.groovy
+        - pipelines/lib/containers.groovy{empty}
