--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
@@ -29,7 +29,7 @@
           values:
           - debian
     execution-strategy:
-      combination-filter: '(onlyos == "all" || onlyos == os) && !((version == "2.3" || version == "2.2" || version == "2.1") && os == "focal")'
+      combination-filter: '(onlyos == "all" || onlyos == os) && !((version == "2.3" || version == "2.2" ) && os == "focal")'
     builders:
       - build_deb_dependency
     publishers:
