--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/katello-pipelines.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/katello-pipelines.yml
@@ -1,27 +1,13 @@
 ---
 - project:
-    name: katello-release-3.15
-    jobs:
-      - 'foreman-pipeline-{type}-{version}-{distro}-{action}'
-    empty: ''
-    version:
-      - '3.15'
-    distro:
-      - centos7
-    action:
-      - install
-      - upgrade
-    type:
-      - katello
-
-- project:
-    name: katello-release-3.16-3.17
+    name: katello-release
     jobs:
       - 'foreman-pipeline-{type}-{version}-{distro}-{action}'
     empty: ''
     version:
       - '3.16'
       - '3.17'
+      - '3.18'
     distro:
       - centos7
     action:
