--- a/puppet/modules/jenkins_job_builder/files/centos.org/ansible/jenkins_job.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/ansible/jenkins_job.yml
@@ -107,7 +107,7 @@
     - name: "Fetch remote console log"
       get_url:
         url: "{{ jenkins_host }}/job/{{ jenkins_job_name }}/{{ poll_result.json.executable.number }}/consoleText"
-        dest: "{{ jenkins_artifacts_directory }}/consoleText"
+        dest: "{{ jenkins_artifacts_directory }}/consoleText.txt"
       when: jenkins_download_artifacts | bool
 
     - name: "Fetch remote artifacts"
