use Katello instead of katello in git properties
otherwise GHPRB doesn't trigger correctly

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/package/katello-master-package-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/package/katello-master-package-release.yaml
@@ -5,7 +5,7 @@
     concurrent: false
     properties:
       - github:
-          url: 'https://github.com/katello/katello'
+          url: 'https://github.com/Katello/katello'
     dsl:
       !include-raw:
         - pipelines/vars/katello-master-release.groovy
