add nightly.groovy to debian nightly pipeline
otherwise foreman_version is undefined

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-nightly-deb-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-nightly-deb-pipeline.yaml
@@ -6,6 +6,7 @@
       - timed: 'H 07 * * 1-5'
     dsl:
       !include-raw:
+        - pipelines/vars/foreman/nightly.groovy
         - pipelines/release/pipelines/foreman-deb.groovy
         - pipelines/lib/release.groovy
         - pipelines/lib/rvm.groovy
