fold 2.1/2.2/2.3 tests into one definition, they're identical

--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-pipelines.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-pipelines.yml
@@ -17,7 +17,7 @@
       - foreman
 
 - project:
-    name: foreman-release-test-2.1
+    name: foreman-release-test
     jobs:
       - 'foreman-pipeline-{type}-{version}-{distro}-{action}'
     empty: ''
@@ -28,41 +28,7 @@
       - ubuntu1804
     version:
       - '2.1'
-    action:
-      - install
-      - upgrade
-    type:
-      - foreman
-
-- project:
-    name: foreman-release-test-2.2
-    jobs:
-      - 'foreman-pipeline-{type}-{version}-{distro}-{action}'
-    empty: ''
-    distro:
-      - centos7
-      - centos8
-      - debian10
-      - ubuntu1804
-    version:
       - '2.2'
-    action:
-      - install
-      - upgrade
-    type:
-      - foreman
-
-- project:
-    name: foreman-release-test-2.3
-    jobs:
-      - 'foreman-pipeline-{type}-{version}-{distro}-{action}'
-    empty: ''
-    distro:
-      - centos7
-      - centos8
-      - debian10
-      - ubuntu1804
-    version:
       - '2.3'
     action:
       - install
